# fd-mimalloc

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ci/: before_deploy.bash
src/: main.rs
