[package]
authors = ["David Peter <mail@david-peter.de>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "fd is a simple, fast and user-friendly alternative to find."
exclude = ["/benchmarks/*"]
homepage = "https://github.com/SiliwangiWirakaryaGanesha/fd-mimalloc"
keywords = [
    "search",
    "find",
    "file",
    "filesystem",
    "tool",
]
license = "MIT/Apache-2.0"
name = "fd-mimalloc"
readme = "README.md"
repository = "https://github.com/SiliwangiWirakaryaGanesha/fd-mimalloc"
version = "8.2.1"
edition= "2018"

[badges.appveyor]
repository = "SiliwangiWirakaryaGanesha/fd-mimalloc"

[badges.travis-ci]
repository = "SiliwangiWirakaryaGanesha/fd-mimalloc"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[[bin]]
name = "fd"
path = "src/main.rs"

[build-dependencies]
clap = "2.31.2"
version_check = "0.9"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
ignore = "0.4.3"
lazy_static = "1.1.0"
num_cpus = "1.8"
regex = "1.0.0"
regex-syntax = "0.6"
ctrlc = "3.1"
humantime = "2.0"
lscolors = "0.7"
globset = "0.4"
anyhow = "1.0"
dirs-next = "2.0"
mimalloc = { version = "0.1.22", default-features = false }
openssl = { version = "0.10.31", features = ["vendored"] }

[dependencies.clap]
version = "2.31.2"
features = ["suggestions", "color", "wrap_help"]

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = "0.2"

[dev-dependencies]
diff = "0.1"
tempdir = "0.3"
filetime = "0.2.1"
